--- a/src/styles/normalize.css
+++ b/src/styles/normalize.css
@@ -13,6 +13,7 @@ html {
   -webkit-text-size-adjust: 100%; /* 2 */
 }
 
+
 /* Sections
    ========================================================================== */
 
@@ -22,6 +23,7 @@ html {
 
 body {
   margin: 0;
+  padding: 0;
 }
 
 /**
